--- a/src/cups/cups-genppdconfig.in
+++ b/src/cups/cups-genppdconfig.in
@@ -1,5 +1,5 @@
 #! @PERL@ -w
-# $Id: cups-genppdconfig.in,v 1.13 2006/05/30 19:25:36 rleigh Exp $
+# $Id: cups-genppdconfig.in,v 1.14 2007/04/17 13:50:08 easysw Exp $
 # A user-friendly dialog-based wrapper for cups-genppd(8).
 # Copyright (C) 2002 Roger Leigh <rleigh@debian.org>
 #
@@ -396,7 +396,7 @@ sub create_ppds {
     $count = 0;
     foreach $language (@chosen_languages) { # loop through languages
 	open GENPPD,
-	"LANGUAGE=$language cups-genppd.$version -v -p $chosen_location/$language $printers 2>&1 |"
+	"LC_ALL=$language LANG=$language LANGUAGE=$language cups-genppd.$version -v -p $chosen_location/$language $printers 2>&1 |"
 	    or die "can't fork cups-genppd: $!";
 	$file = "";
 	while ( defined($file = <GENPPD>)) { # dump genppd stats into guage
