--- a/src/foomatic/foomatic-generator.in
+++ b/src/foomatic/foomatic-generator.in
@@ -225,11 +225,11 @@ if ($foomatic3) {
 # for each value range. Therefore the filenames of numerical options
 # are numbered (eg. Contrast-1.xml).
 for $a (keys(%stp_float_values)) {
-    for $vtmp (keys %{$stp_float_values{$a}}) {
-	for $otmp (keys %{$stp_float_values{$a}{$vtmp}}) {
-	    my $min = $stp_float_values{$a}{'MINVAL'}{$otmp};
-	    my $max = $stp_float_values{$a}{'MAXVAL'}{$otmp};
-	    my $def = $stp_float_values{$a}{'DEFVAL'}{$otmp};
+    for $otmp (keys %{$stp_float_values{$a}}) {
+	for $vtmp (keys %{$stp_float_values{$a}{$otmp}}) {
+	    my $min = $stp_float_values{$a}{$otmp}{'MINVAL'};
+	    my $max = $stp_float_values{$a}{$otmp}{'MAXVAL'};
+	    my $def = $stp_float_values{$a}{$otmp}{'DEFVAL'};
 	    # Skip options with invalid values, the library contains such
 	    # options in the case when only one constant value is allowed
 	    next if (($min >= $max) || ($def < $min) || ($def > $max));
@@ -247,11 +247,11 @@ for $a (keys(%stp_float_values)) {
     }
 }
 for $a (keys(%stp_int_values)) {
-    for $vtmp (keys %{$stp_int_values{$a}}) {
-	for $otmp (keys %{$stp_int_values{$a}{$vtmp}}) {
-	    my $min = $stp_int_values{$a}{'MINVAL'}{$otmp};
-	    my $max = $stp_int_values{$a}{'MAXVAL'}{$otmp};
-	    my $def = $stp_int_values{$a}{'DEFVAL'}{$otmp};
+    for $otmp (keys %{$stp_int_values{$a}}) {
+	for $vtmp (keys %{$stp_int_values{$a}{$otmp}}) {
+	    my $min = $stp_int_values{$a}{$otmp}{'MINVAL'};
+	    my $max = $stp_int_values{$a}{$otmp}{'MAXVAL'};
+	    my $def = $stp_int_values{$a}{$otmp}{'DEFVAL'};
 	    # Skip options with invalid values, the library contains such
 	    # options in the case when only one constant value is allowed
 	    next if (($min >= $max) || ($def < $min) || ($def > $max));
@@ -270,11 +270,11 @@ for $a (keys(%stp_int_values)) {
 }
 
 for $a (keys(%stp_dimension_values)) {
-    for $vtmp (keys %{$stp_dimension_values{$a}}) {
-	for $otmp (keys %{$stp_dimension_values{$a}{$vtmp}}) {
-	    my $min = $stp_dimension_values{$a}{'MINVAL'}{$otmp};
-	    my $max = $stp_dimension_values{$a}{'MAXVAL'}{$otmp};
-	    my $def = $stp_dimension_values{$a}{'DEFVAL'}{$otmp};
+    for $otmp (keys %{$stp_dimension_values{$a}}) {
+	for $vtmp (keys %{$stp_dimension_values{$a}{$otmp}}) {
+	    my $min = $stp_dimension_values{$a}{$otmp}{'MINVAL'};
+	    my $max = $stp_dimension_values{$a}{$otmp}{'MAXVAL'};
+	    my $def = $stp_dimension_values{$a}{$otmp}{'DEFVAL'};
 	    # Skip options with invalid values, the library contains such
 	    # options in the case when only one constant value is allowed
 	    next if (($min >= $max) || ($def < $min) || ($def > $max));
@@ -846,22 +846,22 @@ sub build_num_cons {
 	# this option and a default value for it.
 	my $stpdef;
 	if ((defined($stpdef =
-		     $stp_float_values{$stpname}{"DEFVAL"}{$stpopt})) ||
+		     $stp_float_values{$stpname}{$stpopt}{"DEFVAL"})) ||
 	    (defined($stpdef =
-		     $stp_int_values{$stpname}{"DEFVAL"}{$stpopt})) ||
+		     $stp_int_values{$stpname}{$stpopt}{"DEFVAL"})) ||
 	    (defined($stpdef =
-		     $stp_dimension_values{$stpname}{"DEFVAL"}{$stpopt}))) {
+		     $stp_dimension_values{$stpname}{$stpopt}{"DEFVAL"}))) {
 	    # Find minimum and maximum
 	    my ($min, $max);
 	    if ($type eq "float") {
-		$min = $stp_float_values{$stpname}{"MINVAL"}{$stpopt};
-		$max = $stp_float_values{$stpname}{"MAXVAL"}{$stpopt};
+		$min = $stp_float_values{$stpname}{$stpopt}{"MINVAL"};
+		$max = $stp_float_values{$stpname}{$stpopt}{"MAXVAL"};
 	    } elsif ($type eq "dimension") {
-		$min = $stp_dimension_values{$stpname}{"MINVAL"}{$stpopt};
-		$max = $stp_dimension_values{$stpname}{"MAXVAL"}{$stpopt};
+		$min = $stp_dimension_values{$stpname}{$stpopt}{"MINVAL"};
+		$max = $stp_dimension_values{$stpname}{$stpopt}{"MAXVAL"};
 	    } else {
-		$min = $stp_int_values{$stpname}{"MINVAL"}{$stpopt};
-		$max = $stp_int_values{$stpname}{"MAXVAL"}{$stpopt};
+		$min = $stp_int_values{$stpname}{$stpopt}{"MINVAL"};
+		$max = $stp_int_values{$stpname}{$stpopt}{"MAXVAL"};
 	    }
 	    # Does the range of this option with this printer match
 	    # the Foomatic option entry we are building currently?
