--- a/src/cups/test-rastertogutenprint.in
+++ b/src/cups/test-rastertogutenprint.in
@@ -43,10 +43,10 @@ cupsdir="@cups_conf_serverbin@/filter"
 pdftops="$cupsdir/pdftops 1 1 1 1 ''"
 pstops="$cupsdir/pstops 1 1 1 1 ''"
 pstoraster="$cupsdir/pstoraster"
+cgpdftoraster="$cupsdir/cgpdftoraster 1 1 1 1 ''"
 
-$cupsdir/pdftops 1 1 1 1 '' < gutenprint-sample.pdf > /dev/null 2>&1
-if [ $? -ne 0 ] ; then
-    echo 'Cannot run pdftops, skipping test'
+if [ ! -x "$cupsdir/cgpdftoraster" -a ! -x "$cupsdir/pdftops" ] ; then
+    echo 'CUPS does not appear to be installed, skipping test'
     exit 0
 fi
 
@@ -87,7 +87,11 @@ if [ -d ppd/C ] ; then
 	    echo "$f "
 	    PPD=$f
 	    export PPD
-	    output="`($pdftops < gutenprint-sample.pdf 2>/dev/null | $pstops 2>/dev/null | $pstoraster 2>/dev/null | run_rastertogp > /dev/null) 2>&1`"
+	    if [ -x "$cupsdir/cgpdftoraster" ] ; then
+		output="`($cgpdftoraster < gutenprint-sample.pdf 2>/dev/null | run_rastertogp > /dev/null) 2>&1`"
+	    else
+		output="`($pdftops < gutenprint-sample.pdf 2>/dev/null | $pstops 2>/dev/null | $pstoraster 2>/dev/null | run_rastertogp > /dev/null) 2>&1`"
+	    fi
 	    if [ $? -ne 0 ] ; then
 		retval=1
 	    fi
