--- a/src/cups/test-rastertogutenprint.in
+++ b/src/cups/test-rastertogutenprint.in
@@ -40,10 +40,7 @@ set_args `getopt vcgs "$@"`
 
 version="@GUTENPRINT_MAJOR_VERSION@.@GUTENPRINT_MINOR_VERSION@";
 cupsdir="@cups_conf_serverbin@/filter"
-pdftops="$cupsdir/pdftops 1 1 1 1 ''"
-pstops="$cupsdir/pstops 1 1 1 1 ''"
-pstoraster="$cupsdir/pstoraster"
-cgpdftoraster="$cupsdir/cgpdftoraster 1 1 1 1 ''"
+pages='24-26'
 
 if [ ! -x "$cupsdir/cgpdftoraster" -a ! -x "$cupsdir/pdftops" ] ; then
     echo 'CUPS does not appear to be installed, skipping test'
@@ -88,9 +85,9 @@ if [ -d ppd/C ] ; then
 	    PPD=$f
 	    export PPD
 	    if [ -x "$cupsdir/cgpdftoraster" ] ; then
-		output="`($cgpdftoraster < gutenprint-sample.pdf 2>/dev/null | run_rastertogp > /dev/null) 2>&1`"
+		output="`($cupsdir/cgpdftoraster 1 1 1 1 page-ranges=$pages < ../../doc/gutenprint-users-manual.pdf 2>/dev/null | run_rastertogp > /dev/null) 2>&1`"
 	    else
-		output="`($pdftops < gutenprint-sample.pdf 2>/dev/null | $pstops 2>/dev/null | $pstoraster 2>/dev/null | run_rastertogp > /dev/null) 2>&1`"
+		output="`($cupsdir/pdftops 1 1 1 1 page-ranges=$pages < ../../doc/gutenprint-users-manual.pdf 2>/dev/null | $cupsdir/pstops 1 1 1 1 page-ranges=$pages 2>/dev/null | $cupsdir/pstoraster 2>/dev/null | run_rastertogp > /dev/null) 2>&1`"
 	    fi
 	    if [ $? -ne 0 ] ; then
 		retval=1
