--- a/src/cups/cups-genppdupdate.in
+++ b/src/cups/cups-genppdupdate.in
@@ -1,5 +1,5 @@
 #! @PERL@ -w
-# $Id: cups-genppdupdate.in,v 1.38 2008/04/06 02:37:06 rlk Exp $
+# $Id: cups-genppdupdate.in,v 1.39 2008/04/06 03:07:15 rlk Exp $
 # Update CUPS PPDs for Gutenprint queues.
 # Copyright (C) 2002-2003 Roger Leigh (rleigh@debian.org)
 #
@@ -608,12 +608,12 @@ default_loop:
 
     my $tmpnew = "${ppd_dest_filename}.new";
     if (! open NEWPPD, "> $tmpnew") {
-	warn "Can't open $tmpnew for writing: $!\n";
+	warn "Can't create $tmpnew: $!\n";
 	return 0;
     }
     print NEWPPD $source_data;
     if (! close NEWPPD) {
-	warn "Can't close ${tmpnew}.new for writing: $!\n";
+	warn "Can't close $tmpnew: $!\n";
 	unlink $tmpnew;
 	return 0;
     }
