--- a/src/cups/cups-genppdupdate.in
+++ b/src/cups/cups-genppdupdate.in
@@ -1,5 +1,5 @@
 #! @PERL@ -w
-# $Id: cups-genppdupdate.in,v 1.43 2008/06/16 00:14:38 rlk Exp $
+# $Id: cups-genppdupdate.in,v 1.44 2008/06/17 23:31:10 rlk Exp $
 # Update CUPS PPDs for Gutenprint queues.
 # Copyright (C) 2002-2003 Roger Leigh (rleigh@debian.org)
 #
@@ -19,6 +19,7 @@
 
 use strict;
 use Getopt::Std;
+use Fcntl qw(:mode);
 
 sub parse_options ();
 sub update_ppd ($); # Original PPD filename
